# screens

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/superpowers/plans/: 2026-05-13-in-app-console.md
docs/superpowers/specs/: 2026-05-13-in-app-console-design.md  2026-07-06-review-cockpit-design.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  store.rs  watcher.rs
src/components/: Avatar.tsx  Canvas.tsx  EmbeddedBrowser.tsx  GroupFrame.tsx  Inspector.tsx  NodeCard.tsx  ProjectSwitcher.tsx  Sidebar.tsx  ThemeToggle.tsx  TopBar.tsx  icons.tsx
src/components/Console/: ConsoleDrawer.tsx  ConsoleEntry.tsx  ConsoleFilter.tsx  ConsoleInput.tsx  ConsoleLog.tsx
src/components/Review/: ReviewPanel.tsx
src/hooks/: useMinuteClock.ts  usePersistedState.ts
src/lib/: review.test.ts  review.ts  screensStore.ts  seed.ts  tauri.ts  theme.ts  time.ts
src/lib/console/: consoleInject.test.ts  consoleInject.ts  consoleStore.test.ts  consoleStore.tsx  inspectValue.test.tsx  inspectValue.tsx  types.ts  useConsoleBridge.ts
