[package]
name = "screens-app"
version = "0.1.0"
description = "Screens — a canvas of every route in your project, with a real browser pane and CLI-driven management."
authors = ["Screens contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "screens_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `unstable` enables `Window::add_child`, the multi-webview API we use to
# embed a real WebView2/WKWebView pane inside the app window. `devtools` keeps
# `Webview::open_devtools()` available in release builds too — without it
# the method is gated behind `debug_assertions` and the release build fails
# to compile our embedded-pane DevTools button.
tauri = { version = "2.11.1", features = ["unstable", "devtools"] }
tauri-plugin-log = "2"
notify = "6.1"
dirs = "5"
